fixed bubble and footer issues on mobile/desktop

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,12 @@
 /* Mobile Styles */
-@media only screen and (max-width: 419px) {
+@media only screen and (max-width: 549px) {
     #mission_statement {
         padding-top: 1.75em;
         padding-left: 3em;
         padding-right: 3em;
         padding: .75em;
-        font-size: 2.25em;
+
+        font-size: 2.2em;
         font-weight: bold;
         color: black;
     }
@@ -13,12 +14,15 @@
       margin-top: 1em;
       margin-left: 2em;
       padding: .75em;
-    }
 
+    }
+    #mobile-fix{
+        padding-bottom: 22vh;
+    }
 }
 
 /* Tablet Styles */
-@media only screen and (min-width: 420px) and (max-width: 970px) {
+@media only screen and (min-width: 550px) and (max-width: 970px) {
     #mission_statement {
         margin-left:1em;
         padding-top: 1.75em;
@@ -45,7 +49,7 @@
 }
 
 /* Desktop Styles */
-@media only screen and (min-width: 961px) {
+@media only screen and (min-width: 971px) {
     #mission_statement{
         padding-top: 1.75em;
         padding-left: 3em;
